feat: system problem templates
